# onion-guardian

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: package_checks.yml
examples/: user_smoke_suite.py
onion_guardian/: __init__.py  core.py  defaults.py
onion_guardian/adapters/: __init__.py  audit_sink.py
onion_guardian/analyzers/: __init__.py  command.py  network.py  rate_limit.py  sandbox.py  schema.py
onion_guardian/config/: default_rules.yaml  guardian_prompts.yaml
onion_guardian/contracts/: __init__.py  common.py
onion_guardian/guardian/: intent_analyzer.py  model.py  rewriter.py
onion_guardian/kernel/: __init__.py  audit.py  config.py  pipeline.py  planner.py  reducer.py  types.py
onion_guardian/layer1_semantic/: abstraction.py  action_registry.py
onion_guardian/layer2_router/: router.py  sandbox.py  validator.py
onion_guardian/layer3_gateway/: audit.py  command_filter.py  gateway.py  network_policy.py
onion_guardian/rewrites/: __init__.py  engine.py  types.py
onion_guardian/utils/: crypto.py  types.py
tests/: test_quick_check.py
